objects/privacycenter__Data_Field__mdt.object
<CustomObject>
    <fields>
        <fullName>privacycenter__API_Name__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacycenter__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>privacycenter__Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>privacycenter__Data_Object__c</fullName>
        <label>Data Object</label>
        <referenceTo>privacycenter__Data_Object__mdt</referenceTo>
        <relationshipLabel>Data Fields</relationshipLabel>
        <relationshipName>Data_Fields</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>privacycenter__Date_Max__c</fullName>
        <label>Date Max</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>privacycenter__Date_Min__c</fullName>
        <label>Date Min</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>privacycenter__Field_Length__c</fullName>
        <label>Field Length</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>privacycenter__Field_Type__c</fullName>
        <label>Field Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacycenter__Index_Number__c</fullName>
        <label>Index Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>privacycenter__Masking_Category__c</fullName>
        <label>Masking Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacycenter__Masking_Type__c</fullName>
        <label>Masking Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacycenter__Range_Max__c</fullName>
        <label>Range Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>privacycenter__Range_Min__c</fullName>
        <label>Range Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>privacycenter__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>privacycenter__Unique__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unique</label>
        <type>Checkbox</type>
    </fields>
    <label>Data Field</label>
    <listViews>
        <fullName>privacycenter__DemoPolicy</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>privacycenter__Masking_Type__c</columns>
        <columns>privacycenter__Masking_Category__c</columns>
        <columns>privacycenter__Active__c</columns>
        <columns>privacycenter__Required__c</columns>
        <columns>privacycenter__Unique__c</columns>
        <columns>privacycenter__Field_Length__c</columns>
        <columns>privacycenter__Field_Type__c</columns>
        <columns>privacycenter__Date_Min__c</columns>
        <columns>privacycenter__Date_Max__c</columns>
        <columns>privacycenter__Range_Min__c</columns>
        <columns>privacycenter__Range_Max__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DeveloperName</field>
            <operation>contains</operation>
            <value>Demo</value>
        </filters>
        <label>DemoPolicy</label>
    </listViews>
    <listViews>
        <fullName>privacycenter__DetailFieldView</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>privacycenter__Data_Object__c</columns>
        <columns>privacycenter__Field_Length__c</columns>
        <columns>privacycenter__Field_Type__c</columns>
        <columns>privacycenter__Masking_Category__c</columns>
        <columns>privacycenter__Masking_Type__c</columns>
        <columns>privacycenter__Required__c</columns>
        <columns>privacycenter__Unique__c</columns>
        <filterScope>Everything</filterScope>
        <label>DetailFieldView</label>
    </listViews>
    <pluralLabel>Data Fields</pluralLabel>
</CustomObject>